tests/snapshots/examples_fixtures/type_system__failing__136_tuple_projection_precise_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/136_tuple_projection_precise_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `value` does not match its type annotation.

  examples/type_system/failing/136_tuple_projection_precise_mismatch.flx:28:22
   |
28 |     let value: Int = (1, "s").1
   |                      ^^^^^^^^^^
   |                      ---------- this value has type `String`

   |                --- but `value` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `value` to a `Int` value or update the annotation.
== stdout ==
<not executed>
